--- a/libraries/view_display/style.css
+++ b/libraries/view_display/style.css
@@ -3,12 +3,24 @@
   justify-content: space-between;
 }
 
+.moderation-state-columns--component-container .moderation-state-columns--json-content {
+  display: none;
+}
+
 .moderation-state-columns--component-container .moderation-state-column {
   background: #E0E3E7;
   flex-basis: 0;
   flex-grow: 1;
   margin: 0 1em;
   padding: 1em 1em 0 1em;
+}
+
+.moderation-state-columns--component-container .moderation-state-column:first-child {
+  margin-left: 0;
+}
+
+.moderation-state-columns--component-container .moderation-state-column:last-child {
+  margin-right: 0;
 }
 
 .moderation-state-columns--component-container .moderation-state-column h2 {
